--- a/GE.WebUI/Web.Release.config
+++ b/GE.WebUI/Web.Release.config
@@ -39,7 +39,7 @@
         <remove name="X-AspNetMvc-Version"/>
       </customHeaders>
     </httpProtocol>
-    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <httpErrors errorMode="Custom" existingResponse="Replace" xdt:Transform="Insert">
       <remove statusCode="404" />
       <remove statusCode="500" />
       <error statusCode="404" responseMode="ExecuteURL" path="/error/notfound" />
