--- a/GE.WebAdmin/package.json
+++ b/GE.WebAdmin/package.json
@@ -1,17 +1,19 @@
-﻿{
-    "name": "GE.WebAdmin",
-    "version": "1.0.0",
-    "devDependencies": {
-        "bower": "1.7.2",
-        "gulp": "^3.9.0",
-        "gulp-minify-css": "1.2.3",
-        "gulp-autoprefixer": "3.1.0",
-        "gulp-less": "3.0.5",
-        "del": "2.2.0",
-        "gulp-watch": "4.3.5",
-        "gulp-concat": "2.6.0",
-        "gulp-uglify": "1.5.1",
-        "merge-stream": "1.0.0",
-        "gulp-rename": "1.2.2"
-    }
+{
+  "name": "package",
+  "version": "1.0.0",
+  "private": true,
+  "devDependencies": {
+    "bower": "1.7.2",
+    "gulp": "^3.9.0",
+    "gulp-minify-css": "1.2.3",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-less": "3.0.5",
+    "del": "2.2.0",
+    "gulp-watch": "4.3.5",
+    "gulp-concat": "2.6.0",
+    "gulp-uglify": "1.5.1",
+    "merge-stream": "1.0.0",
+    "gulp-rename": "1.2.2",
+    "es6-promise": "3.1.2"
+  }
 }
