--- a/GE.WebAdmin/bower.json
+++ b/GE.WebAdmin/bower.json
@@ -28,6 +28,7 @@
     "jquery-validation": "1.14.0",
     "ckeditor": "4.5.7",
     "metisMenu": "2.4.0",
-    "bootstrap-datepicker": "1.6.0"
+    "bootstrap-datepicker": "*",
+    "bootstrap-colorpicker": "*"
   }
 }
