--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -130,6 +130,7 @@
     <Compile Include="HtmlHelpers\SxGridView.cs" />
     <Compile Include="HtmlHelpers\SxList.cs" />
     <Compile Include="HtmlHelpers\SxPager.cs" />
+    <Compile Include="Managers\SxAppRoleManager.cs" />
     <Compile Include="Managers\SxAppSignInManager.cs" />
     <Compile Include="Managers\SxAppUserManager.cs" />
     <Compile Include="PictureHandler.cs" />
@@ -139,6 +140,7 @@
       <DependentUpon>Settings.resx</DependentUpon>
     </Compile>
     <Compile Include="StringHelper.cs" />
+    <Compile Include="SxAppRole.cs" />
     <Compile Include="SxAppUser.cs" />
     <Compile Include="SxArticle.cs" />
     <Compile Include="SxClickType.cs" />
