--- a/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
+++ b/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\RepoClick.cs" />
     <Compile Include="Repositories\RepoClickType.cs" />
+    <Compile Include="Repositories\RepoForumPart.cs" />
     <Compile Include="Repositories\RepoRedirect.cs" />
     <Compile Include="Repositories\RepoVote.cs" />
     <Compile Include="Repositories\RepoSeoKeywords.cs" />
