--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClicksController.cs" />
     <Compile Include="Controllers\ClickTypesController.cs" />
+    <Compile Include="Controllers\ForumPartsController.cs" />
     <Compile Include="Controllers\ManualsController.cs" />
     <Compile Include="Controllers\RedirectsController.cs" />
     <Compile Include="Controllers\RequestController.cs" />
@@ -241,9 +242,13 @@
     <Compile Include="Extantions\RepoNews.cs" />
     <Compile Include="Extantions\Repositories\RepoPicture.cs" />
     <Compile Include="Extantions\Repositories\RepoArticle.cs" />
+    <Compile Include="Extantions\Repositories\RepoForumPart.cs" />
     <Compile Include="Extantions\Repositories\RepoSeoInfo.cs" />
     <Compile Include="Extantions\Repositories\RepoClick.cs" />
     <Compile Include="Extantions\Repositories\RepoArticleType.cs" />
+    <Compile Include="ForumPartsController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="GamesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -265,11 +270,13 @@
     <Compile Include="Models\VMClick.cs" />
     <Compile Include="Models\VMClickType.cs" />
     <Compile Include="Models\VMEditClickType.cs" />
+    <Compile Include="Models\VMEditForumPart.cs" />
     <Compile Include="Models\VMEditRole.cs" />
     <Compile Include="Models\VMEditSeoKeyword.cs" />
     <Compile Include="Models\VMEditNews.cs" />
     <Compile Include="Models\VMEditSeoInfo.cs" />
     <Compile Include="Models\VMEditRedirect.cs" />
+    <Compile Include="Models\VMForumPart.cs" />
     <Compile Include="Models\VMLoginModel.cs" />
     <Compile Include="Models\VMRedirect.cs" />
     <Compile Include="Models\VMRequest.cs" />
@@ -413,6 +420,9 @@
     <Content Include="Views\Roles\_GridView.cshtml" />
     <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Roles\Edit.cshtml" />
+    <Content Include="Views\ForumParts\_GridView.cshtml" />
+    <Content Include="Views\ForumParts\Edit.cshtml" />
+    <Content Include="Views\ForumParts\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
