--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Managers\SxAppSignInManager.cs" />
     <Compile Include="Managers\SxAppUserManager.cs" />
     <Compile Include="PictureHandler.cs" />
+    <Compile Include="Providers\QueryProvider.cs" />
     <Compile Include="Repositories\RepoLike.cs" />
     <Compile Include="Resources\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
