--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -2896,6 +2896,8 @@
     <Compile Include="Controllers\SeoInfoController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Extantions\RepoNews.cs" />
+    <Compile Include="Extantions\Repositories\RepoRequest.cs" />
+    <Compile Include="Extantions\Repositories\RepoRoute.cs" />
     <Compile Include="Extantions\Repositories\RepoRedirect.cs" />
     <Compile Include="Extantions\Repositories\RepoPicture.cs" />
     <Compile Include="Extantions\Repositories\RepoArticle.cs" />
