--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -209,41 +209,42 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ArticlesController.cs" />
+    <Compile Include="Controllers\ArticleTypesController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ClicksController.cs" />
     <Compile Include="Controllers\ClickTypesController.cs" />
     <Compile Include="Controllers\ForumPartsController.cs" />
+    <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\ManualsController.cs" />
     <Compile Include="Controllers\MaterialTagsController.cs" />
-    <Compile Include="Controllers\RedirectsController.cs" />
-    <Compile Include="Controllers\RequestController.cs" />
-    <Compile Include="Controllers\UsersController.cs" />
-    <Compile Include="Controllers\RolesController.cs" />
-    <Compile Include="Controllers\SeoKeywordsController.cs" />
-    <Compile Include="Controllers\NewsController.cs" />
-    <Compile Include="Controllers\ArticlesController.cs" />
-    <Compile Include="Controllers\BaseController.cs" />
-    <Compile Include="Controllers\RoutesController.cs" />
     <Compile Include="Controllers\MenuesController.cs" />
     <Compile Include="Controllers\MenuItemsController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\PicturesController.cs" />
-    <Compile Include="Controllers\GamesController.cs" />
-    <Compile Include="Controllers\ArticleTypesController.cs" />
+    <Compile Include="Controllers\RedirectsController.cs" />
+    <Compile Include="Controllers\RequestController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
+    <Compile Include="Controllers\RoutesController.cs" />
     <Compile Include="Controllers\RouteValuesController.cs" />
     <Compile Include="Controllers\SeoInfoController.cs" />
+    <Compile Include="Controllers\SeoKeywordsController.cs" />
     <Compile Include="Controllers\SettingsController.cs" />
-    <Compile Include="Extantions\Repositories\RepoNews.cs" />
-    <Compile Include="Extantions\Repositories\RepoMenu.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Extantions\Repositories\RepoArticle.cs" />
+    <Compile Include="Extantions\Repositories\RepoArticleType.cs" />
+    <Compile Include="Extantions\Repositories\RepoClick.cs" />
+    <Compile Include="Extantions\Repositories\RepoForumPart.cs" />
     <Compile Include="Extantions\Repositories\RepoMaterialTag.cs" />
+    <Compile Include="Extantions\Repositories\RepoGame.cs" />
+    <Compile Include="Extantions\Repositories\RepoMenu.cs" />
+    <Compile Include="Extantions\Repositories\RepoNews.cs" />
+    <Compile Include="Extantions\Repositories\RepoPicture.cs" />
+    <Compile Include="Extantions\Repositories\RepoRedirect.cs" />
     <Compile Include="Extantions\Repositories\RepoRequest.cs" />
     <Compile Include="Extantions\Repositories\RepoRoute.cs" />
-    <Compile Include="Extantions\Repositories\RepoRedirect.cs" />
-    <Compile Include="Extantions\Repositories\RepoPicture.cs" />
-    <Compile Include="Extantions\Repositories\RepoArticle.cs" />
-    <Compile Include="Extantions\Repositories\RepoForumPart.cs" />
     <Compile Include="Extantions\Repositories\RepoSeoInfo.cs" />
-    <Compile Include="Extantions\Repositories\RepoClick.cs" />
-    <Compile Include="Extantions\Repositories\RepoArticleType.cs" />
     <Compile Include="Extantions\Repositories\RepoSeoKeywords.cs" />
     <Compile Include="ForumPartsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
