--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -190,6 +190,9 @@
     <Content Include="Scripts\ge-last-news-block.js" />
     <None Include="Scripts\_references.js" />
     <Content Include="Scripts\like-engine.js" />
+    <Content Include="Scripts\site.js" />
+    <Content Include="share42\icons.png" />
+    <Content Include="share42\share42.js" />
     <Content Include="Views\Articles\List.cshtml">
       <SubType>Code</SubType>
     </Content>
@@ -345,6 +348,7 @@
     <Content Include="Views\Shared\_Foreword.cshtml" />
     <Content Include="Views\MaterialTags\_TagsCloud.cshtml" />
     <Content Include="Views\Shared\_LikeMaterial.cshtml" />
+    <Content Include="Views\Shared\_Share42.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
